# dkcutter-django

./: .eslintrc  .gitignore  .prettierignore  LICENSE  README.md  bun.lockb  dkcutter.json  eslint.config.js  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tox.ini  tsconfig.json
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
docs/: deployment-with-docker.md  developing-locally-docker.md  project-generation-options.md  settings.md
hooks/: postGenProject.ts  preGenProject.ts
template/{{dkcutter.projectSlug}}/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  docker-compose.local.yml  docker-compose.production.yml  eslint.config.js  eslint.config.mjs  justfile  local.yml  manage.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  postcss.config.js  postcss.config.mjs  production.yml  pyproject.toml  tailwind.config.js  tsconfig.json
template/{{dkcutter.projectSlug}}/.devcontainer/: devcontainer.json
template/{{dkcutter.projectSlug}}/.envs/.local/: .django  .postgres
template/{{dkcutter.projectSlug}}/.envs/.production/: .django
template/{{dkcutter.projectSlug}}/.github/: dependabot.yml  renovate.json
template/{{dkcutter.projectSlug}}/.github/workflows/: ci.yml
template/{{dkcutter.projectSlug}}/compose/local/django/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/local/django/celery/flower/: start
template/{{dkcutter.projectSlug}}/compose/local/node/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/local/runner/: node.Dockerfile  uv.Dockerfile
template/{{dkcutter.projectSlug}}/compose/local/uv/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/production/aws/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/production/django/: Dockerfile  entrypoint  start
template/{{dkcutter.projectSlug}}/compose/production/django/celery/flower/: start
template/{{dkcutter.projectSlug}}/compose/production/nginx/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/production/postgres/: Dockerfile
template/{{dkcutter.projectSlug}}/compose/production/traefik/: Dockerfile  traefik.yml
template/{{dkcutter.projectSlug}}/config/: __init__.py  api.py  asgi.py  celery_app.py  urls.py  wsgi.py
template/{{dkcutter.projectSlug}}/config/settings/: base.py  local.py  production.py  test.py
template/{{dkcutter.projectSlug}}/emails/: package.json
template/{{dkcutter.projectSlug}}/emails/components/: footer.tsx  header.tsx  header.{{dkcutter.reactEmailExt}}  layout.tsx  layout.{{dkcutter.reactEmailExt}}  text.tsx  text.{{dkcutter.reactEmailExt}}
template/{{dkcutter.projectSlug}}/emails/components-with-tailwind/: footer.tsx  footer.{{dkcutter.reactEmailExt}}  header.tsx  layout.tsx  layout.{{dkcutter.reactEmailExt}}  text.tsx  text.{{dkcutter.reactEmailExt}}
template/{{dkcutter.projectSlug}}/emails/emails/: welcome.{{dkcutter.reactEmailExt}}
template/{{dkcutter.projectSlug}}/emails/utils/: cn.{{"ts" if dkcutter.useTypescript else "js"}}
template/{{dkcutter.projectSlug}}/requirements/: base.txt  local.txt  production.txt
template/{{dkcutter.projectSlug}}/rspack/: common.config.js  common.config.mjs  common.config.ts  dev.config.js  dev.config.mjs  dev.config.ts  prod.config.mjs
template/{{dkcutter.projectSlug}}/tests/: test_admin.py  test_swagger.py  test_urls.py
template/{{dkcutter.projectSlug}}/webpack/: common.config.js  common.config.mjs  common.config.ts  dev.config.js  dev.config.mjs  dev.config.ts  prod.config.js  prod.config.mjs  prod.config.ts
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/: conftest.py
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/src/: index.css  index.js  index.ts
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/src/components/: theme-toggle.ts
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/static/css/: index.css  styles.css
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/static/js/: project.js  theme-toggle.js
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/: 403.html  403_csrf.html  404.html  500.html  base.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/allauth/elements/: badge.html  button.html  button_group.html  field.html  fields.html  form.html  h1.html  h2.html  img.html  p.html  panel.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/allauth/layouts/: entrance.html  manage.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/forms/: form_snippet.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/pages/: home.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/templates/users/: user_detail.html  user_update.html
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/users/: adapters.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/users/migrations/: 0001_initial.py
template/{{dkcutter.projectSlug}}/{{dkcutter.projectSlug}}/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py
tests/: constants.ts  generate.test.ts  index.ts  test_docker.sh  utils.ts
(+50 files in other folders)
