[project]
name = "dkcutter-django"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django-upgrade==1.22.2",
  "djlint==1.36.4",
  "jinja2==3.1.5",
  "pre-commit==4.1.0",
  "ruff==0.9.3",
]

[tool.black]
line-length = 119
target-version = [ "py312" ]

[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
  "tests",
  "hooks",
]

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,T028"
ignore_blocks = "raw"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "jinja"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
