[project]
name = "dkcutter-django"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django-upgrade==1.25.0",
  "djlint==1.36.4",
  "jinja2==3.1.6",
  "ruff==0.11.11",
  "tox==4.26.0",
  "tox-uv==1.25.0",
]

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,T028"
ignore_blocks = "raw"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "jinja"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
